frontend/styles/index.scss
@import "globals.scss";

#gradient-canvas {
  position: absolute;
  width: 110vw;
  height: 110vh;
  top: 0;
  left: 0;

  --gradient-color-1: #05386b;
  --gradient-color-2: #31685d;
  --gradient-color-3: #43a770;
  --gradient-color-4: #2a4b6d;
  z-index: -1;
}

